--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -409,8 +409,10 @@
                 </span>
 
                 <span class="header-info">
-                    <span class="scheduled-label">To be administered on: </span>
-                    <span class="scheduled-date">{{ ::enteredAdminFormData.scheduled_date | date: 'mediumDate' }}</span>
+                    <span class="scheduled-label">administer between: </span>
+
+                    <span class="scheduled-date"> {{ enteredAdminFormData.calculatedDateRange[0] | date: 'longDate' }} and {{ enteredAdminFormData.calculatedDateRange[1] | date: 'longDate' }} </span>
+
                 </span>
                 <div class="btn-group pull-right" role="group" aria-label="...">
                     <button type="button" class="btn btn-info" ng-class="{ 'active': state.administerFormOpen }" ng-click="toggleAdministerForm()" on-keyup keys="[13]">Administer</button>
