--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -409,10 +409,14 @@
                 </span>
 
                 <span class="header-info">
-                    <span class="scheduled-label">administer between: </span>
-
-                    <span class="scheduled-date"> {{ enteredAdminFormData.calculatedDateRange[0] | date: 'longDate' }} and {{ enteredAdminFormData.calculatedDateRange[1] | date: 'longDate' }} </span>
-
+                    <span ng-if="enteredAdminFormData.calculatedDateRange[1] > enteredAdminFormData.calculatedDateRange[0]" class="scheduled-label">
+                        <span class="scheduled-label">administer between: </span>
+                        <span class="scheduled-date"> {{ enteredAdminFormData.calculatedDateRange[0] | date: 'longDate' }} and {{ enteredAdminFormData.calculatedDateRange[1] | date: 'longDate' }} </span>
+                    </span>
+                    <span ng-if="enteredAdminFormData.calculatedDateRange[1] <= enteredAdminFormData.calculatedDateRange[0]" class="scheduled-label">
+                        <span class="scheduled-label">administer after: </span>
+                        <span class="scheduled-date"> {{ enteredAdminFormData.calculatedDateRange[0] | date: 'longDate' }} </span>
+                    </span>
                 </span>
                 <div class="btn-group pull-right" role="group" aria-label="...">
                     <button type="button" class="btn btn-info" ng-class="{ 'active': state.administerFormOpen }" ng-click="toggleAdministerForm()" on-keyup keys="[13]">Administer</button>
