--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -408,16 +408,24 @@
                     <span class="indication-date">{{ ::enteredAdminFormData.indication_name | date: 'mediumDate' }}</span>
                 </span>
 
-                <span class="header-info">
-                    <span ng-if="enteredAdminFormData.calculatedDateRange[1] > enteredAdminFormData.calculatedDateRange[0]" class="scheduled-label">
+                <span class="header-info"> <!-- / if not rescheduled then display calculated range else display scheduled date -->
+
+                    <span ng-if="enteredAdminFormData.scheduled_date.getMilliseconds() == 0 && enteredAdminFormData.calculatedDateRange[1] > enteredAdminFormData.calculatedDateRange[0]" >
                         <span class="scheduled-label">administer between: </span>
                         <span class="scheduled-date"> {{ enteredAdminFormData.calculatedDateRange[0] | date: 'longDate' }} and {{ enteredAdminFormData.calculatedDateRange[1] | date: 'longDate' }} </span>
                     </span>
-                    <span ng-if="enteredAdminFormData.calculatedDateRange[1] <= enteredAdminFormData.calculatedDateRange[0]" class="scheduled-label">
+                    <span ng-if="enteredAdminFormData.scheduled_date.getMilliseconds() == 0 && enteredAdminFormData.calculatedDateRange[1] <= enteredAdminFormData.calculatedDateRange[0]" >
                         <span class="scheduled-label">administer after: </span>
                         <span class="scheduled-date"> {{ enteredAdminFormData.calculatedDateRange[0] | date: 'longDate' }} </span>
                     </span>
+
+                    <!-- / if not rescheduled then display calculated range else display scheduled date -->
+                    <span ng-if="enteredAdminFormData.scheduled_date.getTime()" >
+                        <span class="scheduled-label">To be administered on: </span>
+                        <span class="scheduled-date"> {{ enteredAdminFormData.scheduled_date | date: 'longDate'}} </span>
+                    </span>
                 </span>
+
                 <div class="btn-group pull-right" role="group" aria-label="...">
                     <button type="button" class="btn btn-info" ng-class="{ 'active': state.administerFormOpen }" ng-click="toggleAdministerForm()" on-keyup keys="[13]">Administer</button>
                     <button type="button" class="btn btn-reschedule" ng-click="toggleRescheduleForm()" on-keyup keys="[13]">Reschedule</button>
