--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -24,7 +24,7 @@
 <div id="appcontainer" class="appcontainer" ng-app="vaccinations">
 <!-- <div id="appcontainer"> -->
 
-    <div class="container" ng-controller="MainController">
+    <div class="container" ng-controller="MainController" style="width: 900px;">
 
         <loader></loader>
         <!-- ADD SECTION -->
@@ -271,6 +271,7 @@
                         <option value=""></option>
                         </select>
                     </div>
+
                     <feedback warn="form.manufacturer.$error.required" warning="Enter a valid manufacturer. For example Pfizer, GlaxoSmithKline..."></feedback>
 
                     <div class="form-group">
